# jepa-tetris

./: .env.runpod.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  Dockerfile  Makefile  README.md  RESULTS.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/skills/runpod-training-workflow/: SKILL.md
docs/: FINDINGS.md  RESEARCH_ROADMAP.md  RUNPOD.md  cf_vs_single_comparison.md  decoder.md
jepa_tetris/: eval.py  eval_causality.py  plan.py  train.py  train_probe.py  train_probe_rollout.py
jepa_tetris/data/: buffer_adapters.py  collect.py  exploration.py  replay_buffer.py
jepa_tetris/env/: pieces.py  tetris.py
jepa_tetris/models/: action_encoder.py  decoder.py  encoder.py  inverse_model.py  predictor.py  probe.py
jepa_tetris/utils/: checkpoint.py  logging.py  run_paths.py
jepa_tetris/viz/: __init__.py  render.py
scripts/: aggregate_encoder_sweep.py  aggregate_sweep.py  causality_diagnostic.py  cf_to_single.py  compare_planners.py  compare_runs.py  convergence_curve.py  decoder_explorer.py  diagnose.py  encoder_sweep.py  eval_heuristic.py  multistep_accuracy.py  plot_loss.py  pod_startup.sh  run_arch_sweep.sh  run_sweep.sh  runpod_pod.py  scaling_summary.py  trace_planner.py  train_decoder.py  visualize_predictions.py
tests/: test_buffer_adapters.py  test_causality.py  test_cf_to_single.py  test_checkpoint.py  test_collect_counterfactual.py  test_counterfactual_buffer.py  test_counterfactual_train.py  test_decoder.py  test_env.py  test_exploration.py  test_models.py  test_planner.py  test_replay_buffer.py  test_train_decoder.py
(+5 files in other folders)
