[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jepa-tetris"
version = "0.1.0"
description = "JEPA-based world model for simplified Tetris"
requires-python = ">=3.11"

[project.optional-dependencies]
viz = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "umap-learn>=0.5",
    "streamlit-plotly-events>=0.0.6",
]

[tool.setuptools.packages.find]
include = ["jepa_tetris*"]
